objects/Apps_Projects__c.object
<CustomObject>
    <fields>
        <fullName>BI_Impact__c</fullName>
        <label>BI Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BSA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Apps_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <label>Business Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary_Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Apps_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Project Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <type>Date</type>
    </fields>
    <label>Apps Projects</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Owner__c</columns>
        <columns>Primary_Resource__c</columns>
        <columns>Size__c</columns>
        <columns>Target__c</columns>
        <columns>BI_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Apps Projects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apps Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>